--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@radix-ui/react-tooltip": "^1.2.8",
+    "agentation": "^2.2.1",
     "clsx": "^2.1.1",
     "framer-motion": "^12.34.3",
     "motion": "^12.34.3",
